laggt till home och bg. importerar router

--- a/mt-a/src/Components/Home_styles.css
+++ b/mt-a/src/Components/Home_styles.css
@@ -1,4 +1,11 @@
-.home{
-    background-image: url("../assets/Logga.png")
-
+.home {
+    justify-content: center;
+    align-content: center;
+    background-image: url("../assets/Logga.png");
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: 20%;
+    width: 100vw;
+    height: 100vh;
+    
 }
