--- a/mt-a/src/Components/Appbar_styles.css
+++ b/mt-a/src/Components/Appbar_styles.css
@@ -12,3 +12,15 @@
     list-style:none;
     font-size: 1.5em;
 }
+
+li{
+    transition: transform 0.2s ease; 
+    cursor: pointer;
+}
+li:hover {
+    transform: scale(1.1); 
+}
+
+li:active {
+    transform: scale(1); 
+}
