--- a/mt-a/src/Components/Home_styles.css
+++ b/mt-a/src/Components/Home_styles.css
@@ -9,3 +9,14 @@
     height: 100vh;
     
 }
+
+.home_about{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+
+
